<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL_Test" Id="{7767a29b-1a7a-4bae-af33-bd38e6e553d7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bEnqueueItem	: BOOL;
	bDequeueItem	: BOOL;
	itemToStored	: INT;
	ExportedItem	: INT;
END_VAR	]]></Declaration>
  </GVL>
</TcPlcObject>