<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="FB_FIFOTest" Id="{d5fb4b37-87b6-4c80-a865-b42802c979e7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_FIFOTest
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbFIFO		: FB_FIFOInt;
	
	enqTrig		: R_TRIG;
	deqTrig		: R_TRIG;
	
	bEnqueueError : BOOL;
	bDequeueError : BOOL; 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
fbFIFO();

enqTrig(CLK := GVL_Test.bEnqueueItem);
deqTrig(CLK := GVL_Test.bDequeueItem);

IF enqTrig.Q THEN
	fbFIFO.Enqueue(i_Item := GVL_Test.itemToStored);
	bEnqueueError := fbFIFO.o_EnqueueError;
END_IF

IF deqTrig.Q THEN
	fbFIFO.Dequeue(o_Item => GVL_Test.ExportedItem);
	bDequeueError := fbFIFO.o_DequeueError;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_FIFOTest">
      <LineId Id="11" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>